--- a/dada/templates/invalid_list_captcha_widget.tmpl
+++ b/dada/templates/invalid_list_captcha_widget.tmpl
@@ -2,11 +2,12 @@
 
 <input type="hidden" name="recaptcha_challenge_field" value="<!-- tmpl_var img_str -->" /> 
 <div class="row">
-	<div class="small-12 columns"> 
+	<div class="small-12 columns text-centered"> 
 		<img 
 			src="<!-- tmpl_var PROGRAM_URL -->/captcha_img/<!-- tmpl_var img_str -->/" 
 			width="<!-- tmpl_var img_width -->" 
-			height="<!-- tmpl_var img_height -->">
+			height="<!-- tmpl_var img_height -->"
+		>
 	</div> 
 </div>
 <div class="row">
