--- a/dada/templates/advanced_list_search_form.tmpl
+++ b/dada/templates/advanced_list_search_form.tmpl
@@ -1,26 +1,21 @@
 <div id="advanced_list_search">
-    <p>&nbsp;</p>
-    <div style="max-height: 900px; overflow: auto;">
-        <form id="advanced_list_search_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-            <fieldset> 
-                <legend>Advanced Search</legend>
-                <!-- <a href="#" class="close_advanced_search_list">[x]</a> --> 
-            <table  class="text-center">
-                <tr>
-                    <td>
-                        <!-- tmpl_include field_comparisons_widget.tmpl -->
-                        <div class="buttonfloat"> 
-                        <input type="button" class="advanced_search_list processing" value="Search"> 
-                       <!--  <input type="reset"  value="Clear"  class="clear_advanced_search_list"> -->
-                        <input type="reset"  value="Cancel" class="close_advanced_search_list cautionary">
-
-                        </div>  
-                        <div class="floatclear"></div> 
-                    </td>
-                    </tr>
-                </table> 
-        </fieldset>
-        </form> 
-    </div> 
+	<form id="advanced_list_search_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+		<fieldset> 
+			<legend>
+				Advanced Search
+			</legend>
+			
+			<!-- tmpl_include field_comparisons_widget.tmpl -->
+			
+			<ul class="button-group right">
+			    <li>
+					<input type="button" class="button advanced_search_list processing" value="Search"> 
+				</li>
+				<li>
+					<input type="reset"  value="Cancel" class="button close_advanced_search_list cautionary">
+				</li>
+			</ul>
+		</fieldset>
+	</form> 
 </div> 
 
